# simple-sycl-samples

./: CMakeLists.txt  README.md  clang_toolchain.cmake  dpcpp_toolchain.cmake
samples/: CMakeLists.txt
samples/00_enumsycl/: CMakeLists.txt  main.cpp
samples/00_extendeddevicequeries/: CMakeLists.txt  main.cpp
samples/00_hellosycl/: CMakeLists.txt  main.cpp
samples/00_hellosyclnt/: CMakeLists.txt  main.cpp
samples/04_julia/: CMakeLists.txt  bmp.hpp  main.cpp
samples/10_queueexperiments/: CMakeLists.txt  main.cpp
samples/11_shuffleexperiments/: CMakeLists.txt  main.cpp
samples/11_threadconcurrent/: CMakeLists.txt  main.cpp
samples/201_hmemlinkedlist/: main.cpp
samples/99_ballot/: CMakeLists.txt  main.cpp
samples/99_cyclecounter/: CMakeLists.txt  main.cpp
samples/99_loadperf/: CMakeLists.txt  main.cpp
samples/99_matrixexperiments/: CMakeLists.txt  main.cpp
samples/99_mklgemm/: Makefile  main.cpp
samples/99_reductions/: CMakeLists.txt  main.cpp
samples/dpcpp/: CMakeLists.txt
samples/dpcpp/00_maxregs/: CMakeLists.txt  main.cpp
samples/dpcpp/10_annotated_pointers/: CMakeLists.txt  main.cpp
samples/dpcpp/99_invokesimd/: CMakeLists.txt  main.cpp
samples/dpcpp/99_mathfuncs/: CMakeLists.txt  main.cpp
samples/dpcpp/usm/: CMakeLists.txt
samples/dpcpp/usm/00_usmqueries/: CMakeLists.txt  README.md  main.cpp
samples/dpcpp/usm/100_dmemhelloworld/: CMakeLists.txt  README.md  main.cpp
samples/dpcpp/usm/200_hmemhelloworld/: CMakeLists.txt  main.cpp
samples/dpcpp/usm/300_smemhelloworld/: CMakeLists.txt  main.cpp
samples/dpcpp/usm/400_sysmemhelloworld/: CMakeLists.txt  main.cpp
samples/dpcpp/usm/500_bigalloc/: CMakeLists.txt  main.cpp
samples/usm/: CMakeLists.txt  README.md
samples/usm/00_usmqueries/: main.cpp
samples/usm/100_dmemhelloworld/: CMakeLists.txt  main.cpp
samples/usm/101_dmemlinkedlist/: CMakeLists.txt  main.cpp
samples/usm/200_hmemhelloworld/: README.md  main.cpp
samples/usm/201_hmemlinkedlist/: CMakeLists.txt
samples/usm/300_smemhelloworld/: CMakeLists.txt  README.md  main.cpp
samples/usm/301_smemlinkedlist/: CMakeLists.txt  main.cpp
samples/usm/400_sysmemhelloworld/: README.md  main.cpp
samples/usm/500_bigalloc/: CMakeLists.txt  main.cpp
samples/usm/501_oversubscribe/: CMakeLists.txt  main.cpp
samples/vulkan/: CMakeLists.txt
samples/vulkan/00_juliavk/: CMakeLists.txt  main.cpp
