# Copyright (c) 2020-2025 Ben Ashbaugh
#
# SPDX-License-Identifier: MIT

add_subdirectory( 00_usmqueries )

add_subdirectory( 100_dmemhelloworld )
add_subdirectory( 200_hmemhelloworld )
add_subdirectory( 300_smemhelloworld )
add_subdirectory( 400_sysmemhelloworld )

add_subdirectory( 500_bigalloc )
